# tulip2

./: .gitignore  INSTALL  Makefile  Makefile.bak  Makefile.in  Makefile~  README  README.autotools  Releasenotes-2015-10-19.text  Releasenotes-2015-12-21.text  Releasenotes-2016-01-07.text  Releasenotes-2016-01-14.text  Releasenotes-2016-01-26.text  Releasenotes-2016-01-28.text  Releasenotes-2016-02-04.text  Releasenotes-2016-03-17.text  Releasenotes-2016-06-02.text  Releasenotes-2016-06-03.text  Releasenotes-2017-04-06.text  Releasenotes.text  config.h  config.h.in  config.status  configure  configure.ac  configure.scan  err  maketarfile  out  vars.mk
src/: Makefile  Makefile.am  Makefile.in  bak-mdsystem-pot-abop.cpp  compound-getprop.cpp  compound-getprop.cpp~  compound-listfit.cppinc  compound-misc.cppinc  compound-strfit.cppinc  compound.cpp  compound.cpp~  compound.hpp  compoundfit-getprop.cpp  compoundfit-getprop.cpp~  compoundfit-list.cpp  compoundfit-list.cppinc  compoundfit-list.cppinc~  compoundfit-list.cpp~  compoundfit-list.hpp  compoundfit-list.hpp~  compoundfit.cpp  compoundfit.cpp~  compoundfit.hpp  compoundfit.hpp~  elem-iacs.cpp  elem-iacs.hpp  errors.hpp  get-comp-prop.cpp  get-comp-prop.hpp  get-ini-fit-data.cpp  get-ini-fit-data.cpp~  get-ini-fit-data.hpp  get-ini-fit-data.hpp~  helpfuns.cpp  helpfuns.hpp  latcalc.cpp  latcalc.hpp  lattice-simple.cpp  lattice-simple.cpp~  lattice-simple.hpp  (+42 more)
src/.deps/: tulip-compound.Po  tulip-compoundfit-getprop.Po  tulip-compoundfit-list.Po  tulip-compoundfit.Po  tulip-elem-iacs.Po  tulip-get-comp-prop.Po  tulip-get-ini-fit-data.Po  tulip-helpfuns.Po  tulip-lattice-simple.Po  tulip-make-ini-fit.Po  tulip-mdsettings.Po  tulip-mdsystem-force.Po  tulip-mdsystem-pot-abop.Po  tulip-mdsystem-pot-eam.Po  tulip-mdsystem-relax.Po  tulip-mdsystem.Po  tulip-param-pot.Po  tulip-potclasses-pot-abop.Po  tulip-potclasses-pot-eam.Po  tulip-potclasses-reppot.Po  tulip-potinfo-readeam.Po  tulip-potinfo-readinfo.Po  tulip-potinfo-readreppot.Po  tulip-potinfo-readspecs.Po  tulip-potinfo.Po  tulip-propfun.Po  tulip-report.Po  tulip-specs-fit-prop-pot.Po  tulip-tulip.Po  tulip_static-compound.Po  tulip_static-compoundfit-getprop.Po  tulip_static-compoundfit-list.Po  tulip_static-compoundfit.Po  tulip_static-elem-iacs.Po  tulip_static-get-comp-prop.Po  tulip_static-get-ini-fit-data.Po  tulip_static-helpfuns.Po  tulip_static-lattice-simple.Po  tulip_static-mdsettings.Po  tulip_static-mdsystem-force.Po  (+17 more)
src/bak/: mdsystem-pot-abop.cpp
src/discarded/: elast-const.text
(+186 files in other folders)
